tests/invalid/while_infinite.turtle
resize 10, 10
while (1) {
    move 1
}